Fixing JFXC-2206 javafx api docs: "Profile:" label in upper right corner is unreadable because of lack of contrast.

--- a/javafxdoc/src/com/sun/tools/xslhtml/resources/sdk.css
+++ b/javafxdoc/src/com/sun/tools/xslhtml/resources/sdk.css
@@ -67,6 +67,9 @@ body {
     float: left;
 }
 
+#top-header #profile-switcher {
+    color : white;
+}
 
 
 
